--- a/lr-main/package.json
+++ b/lr-main/package.json
@@ -7,6 +7,8 @@
     "express": "^5.1.0",
     "node-cron": "^4.2.1",
     "puppeteer": "^24.16.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "openai": "^4.5.0",
+    "node-fetch": "^3.3.2"
   }
 }
