--- a/lr-main/package.json
+++ b/lr-main/package.json
@@ -6,9 +6,9 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.104.0",
     "puppeteer": "^24.16.0",
-    "xlsx": "^0.18.5",
-    "openai": "^4.5.0",
-    "node-fetch": "^3.3.2"
+    "xlsx": "^0.18.5"
   }
 }
